@@ -5,3 +5,4 @@ Last bootstrap: {{ ansible_date_time.iso8601 }}
 Ansible version: {{ ansible_version.full }}
 OS distro: {{ ansible_distribution }} / {{ ansible_distribution_major_version }}
 OS distribution: {{ ansible_distribution_release }}
+ot_repo: {{ ot_repo }}
